# MSD

./: .gitignore
MS/MS_3/: arguments.txt
MS/milestone3/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
MS/milestone3/src/install/turtle_chase/share/turtle_chase/: package.dsv  package.ps1  package.sh  package.xml
MS/milestone3/src/log/: latest_build
MS/milestone3/src/turtle_chase/: setup.py
dobot_ws/install/: local_setup.sh  setup.sh
dobot_ws/log/: latest_build
dobot_ws/src/dobot_magician/: package.xml  setup.py
dobot_ws/src/dobot_magician/dobot_magician/: action_server_template.py  dobot_cartesian_ptp.py  dobot_client.py  dobot_driver.py  dobot_ee.py  dobot_homing.py  dobot_kinematics_test_copy.py  dobot_pickandplace.py  dobot_ptp.py  dobot_state  dobot_state.py  test.py
dobot_ws/src/dobot_magician/launch/: dobot_magician_launch.xml
dobot_ws/src/dobot_magician_interface/: CMakeLists.txt
dobot_ws/src/dobot_magician_interface/action/: PosePTP.action
dobot_ws/src/dobot_magician_interface/msg/: TeleopAction.msg
dobot_ws/src/dobot_magician_interface/srv/: PickAndPlace.srv
dobot_ws/src/dobot_teleop/: package.xml  setup.py
dobot_ws/src/dobot_teleop/dobot_teleop/: dobot_teleop.py  dobot_teleop_keyboard.py  keyboard.py  test.py
dobot_ws/src/dobot_twin_viz/: package.xml  setup.cfg  setup.py
dobot_ws/src/dobot_viz/: package.xml  setup.py
dobot_ws/src/dobot_viz/launch/: dobot_viz_launch.xml
milestone5_ws/src/robots_viz/: package.xml  setup.py
milestone6/: dobot_kinematics_test.py  dobot_kinematics_test_copy.py  test.py
(+41 files in other folders)
